Design aanpassingen voor sidebar, toevoegen van projecten en toevoegen van tasks

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://kit.fontawesome.com/b57b390e9c.js" crossorigin="anonymous"></script>
   </body>
 </html>
